test/classes/deitz/inherit/test_inherit_error3.good
Error: Class C inherits from record D (test_inherit_error3.chpl:1)
