test/classes/deitz/inherit/test_inherit_error3.chpl
class C : D {
  var x : integer = 1;
}

record D {
  var y : integer = 1;
}

var c : C = C();

writeln(c);
